# mxd_mdg_ppc

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  conf.oil  toolchain.cmake
.run/: mdg.run.xml
bsw/: CMakeLists.txt  ee_boot.c  main.c  main.cpp
bsw/ASW/: ASW_MemMap.h  ASW_Tasks.c  ASW_Tasks.h  EngSns.c
bsw/ASW/Actuators/: ACTR_MemMap.h
bsw/ASW/Actuators/BrkVacPmp/: BrkVacPmpCtrl.c  BrkVacPmpCtrl.h  BrkVacPmpCtrl_Out.c  BrkVacPmpCtrl_Out.h
bsw/ASW/Actuators/CltFan/: CltFanCtrl.c  CltFanCtrl.h  CltFanCtrl_Out.c  CltFanCtrl_Out.h
bsw/ASW/Actuators/FuPmp/: FuPmpCtrl.c  FuPmpCtrl.h  FuPmpCtrl_Out.c  FuPmpCtrl_Out.h
bsw/ASW/Actuators/TrbChgDivVlv/: TrbChgDivVlv.c  TrbChgDivVlv.h  TrbChgDivVlv_Out.c  TrbChgDivVlv_Out.h
bsw/ASW/Actuators/TrbChgVtgActr/: TrbChgVtgActr.c  TrbChgVtgActr.h  TrbChgVtgActr_Out.c  TrbChgVtgActr_Out.h
bsw/ASW/IGN/: IGN_MemMap.h  IgnGov.c  IgnGov.h  IgnGov_Out.c  IgnGov_Out.h
bsw/ASW/IGN/IDLE/: IdleMgmt.c  IdleMgmt.h  IdleOutputs.c  IdleOutputs.h  Idle_Calibration.c  Idle_MemMap.h
bsw/ASW/INJ/: InjMgmt.c  InjMgmt.h  InjOutputs.c  InjOutputs.h
bsw/ASW/INJ/CloseLoop/: InjMixCtrl.c  InjMixCtrl.h
bsw/ASW/Sensors/: SENSOR_MemMap.h
bsw/ASW/Sensors/Epm/: Epm.c  Epm_Out.h
bsw/ASW/Sensors/FAirIntk/: FAirIntk.c  FAirIntk.h  FAirIntk_Out.c  FAirIntk_Out.h
bsw/ASW/Sensors/PDev/PAirIntk/: PAirIntk.c  PAirIntk.h  PAirIntk_Out.c  PAirIntk_Out.h
bsw/ASW/Sensors/PDev/PBrkServo/: PBrkServo.c  PBrkServo.h  PBrkServo_Out.c  PBrkServo_Out.h
bsw/ASW/Sensors/PDev/PEngOil/: PEngOil.c  PEngOil.h  PEngOil_Out.c  PEngOil_Out.h
bsw/ASW/Sensors/PDev/PFuRail/: PFuRail.c  PFuRail.h  PFuRail_Out.c  PFuRail_Out.h
bsw/ASW/Sensors/RIntkThr/: RIntkThr.c  RIntkThr.h  RIntkThr_Out.c  RIntkThr_Out.h
bsw/ASW/Sensors/RTrbVtgPos/: RTrbVtgPos.c  RTrbVtgPos.h  RTrbVtgPos_Out.c  RTrbVtgPos_Out.h
bsw/ASW/Sensors/TDev/: NTC12_Cal.c  NTC12_Cal.h
bsw/ASW/Sensors/TDev/TAirIntk/: TAirIntk.c  TAirIntk.h  TAirIntk_Out.c  TAirIntk_Out.h
bsw/ASW/Sensors/TDev/TEngClt/: TEngClt.c  TEngClt.h  TEngClt_Out.c  TEngClt_Out.h
bsw/ASW/Sensors/TDev/TEngOil/: TEngOil.c  TEngOil.h  TEngOil_Out.c  TEngOil_Out.h
bsw/BSW/: BSW_MemMap.h  BSW_Tasks.c  BSW_Tasks.h
bsw/BSW/CDD/CJ125/: CJ125.c  CJ125.h  CJ125_Out.c  CJ125_Out.h
bsw/BSW/CDD/MC33926/: CDD_MC33926.c  CDD_MC33926.h  CDD_MC33926_Out.c  CDD_MC33926_Out.h
bsw/BSW/COM/CAN/: CanIf.c
bsw/BSW/COM/XCP/: xcp_cfg.h  xcp_if.c  xcp_if.h  xcp_par.c  xcp_par.h
bsw/BSW/Cfg/ETPU/: ETPU_Cfg.c  ETPU_Cfg.h
bsw/BSW/Cfg/SWT/: SWT_Cfg.h
bsw/BSW/HAL/DSPI/: dspi.c  dspi.h
bsw/BSW/HAL/EMIOS/: EMIOS.c  EMIOS.h  EMIOS_Cfg.c  EMIOS_Cfg.h
bsw/BSW/HAL/EQADC/: EQADC.c  EQADC.h  EQADC_Cfg.c  EQADC_Cfg.h  EQADC_Out.c  EQADC_Out.h
bsw/BSW/HAL/ESCI/: ESCI_Cfg.c  ESCI_Cfg.h  esci.c  esci.h
bsw/BSW/HAL/FLASH/: flash.c  flash.h
bsw/BSW/HAL/FMPLL/: fmpll.c  fmpll.h
bsw/BSW/HAL/FlexCAN/: Can_Cfg.h  Can_GeneralTypes.h  flex_can.c  flex_can.h
bsw/BSW/HAL/GPIO/: GPIO_Cfg.c  GPIO_Cfg.h  gpio.c  gpio.h
bsw/BSW/HAL/PIT/: PIT.c  PIT.h  PIT_Cfg.c  PIT_Cfg.h
bsw/BSW/HAL/SWT/: swt.c  swt.h
bsw/BSW/OS/: EE_Memmap.h  InitHW.c  InitHW.h  OS_Event.h  OS_Task.c  OS_Task.h
bsw/BSW/OS/ee_files/pkg/cfg/arch/: rules_ppc_generic.mk
bsw/BSW/eTPU/cam/: etpu_cam.c  etpu_cam.h
bsw/BSW/eTPU/crank/: CRANK-doxyDoc.chm  etpu_crank.c  etpu_crank.h
bsw/BSW/eTPU/etpu_set/: etpu_cam_auto.h  etpu_crank_auto.h  etpu_fuel_auto.h  etpu_knock_auto.h  etpu_set.h  etpu_spark_auto.h  etpu_tg_auto.h
bsw/BSW/eTPU/fuel/: etpu_fuel.c  etpu_fuel.h
bsw/BSW/eTPU/knock/: etpu_knock.c  etpu_knock.h
bsw/BSW/eTPU/spark/: etpu_spark.c  etpu_spark.h
bsw/BSW/eTPU/tg/: etpu_tg.c  etpu_tg.h
bsw/BSW/eTPU/util/: MPC5644A_vars.h  etpu_struct.h  etpu_util.c  etpu_util.h
bsw/Debug/: eecfg.c  makefile
bsw/IL/: FlsSrvc.c  FlsSrvc.h  IL_An.c  IL_An.h  IL_CAN.h  IL_ETPU.c  IL_ETPU.h  IL_GPIO.c  IL_GPIO.h  IL_MemMap.h  IL_PWM.c  IL_PWM.h  IL_Tasks.c  IL_Tasks.h
bsw/Project_Headers/: ComStack_Cfg.h  ComStack_Types.h  Compiler.h  MPC5644A.h  MemMap.h  MemMap.xz  Platform_Types.h  Std_Types.h  derivative.h
bsw/Utils/: Ifl.c  Ifl.h  Ifx.c  Ifx.h  UtilsFilters.c  UtilsFilters.h  UtilsLookup.c  UtilsLookup.h  UtilsPID.c  UtilsPID.h
bsw/os/: CMakeLists.txt  eecfg.c  eecfg.h
bsw/os/ee_files/pkg/: ee.h  ee_internal.h  ee_irq.h
bsw/os/ee_files/pkg/cfg/arch/: cc_ppc_codewarrior.mk
bsw/os/ee_files/pkg/com/: ee_com.h
bsw/os/ee_files/pkg/com/cabs/inc/: ee_cabs.h
bsw/os/ee_files/pkg/com/cabs/src/: ee_cabs.c
bsw/os/ee_files/pkg/com/com/inc/: ee_com.h  ee_cominit.h  ee_comprv.h
bsw/os/ee_files/pkg/com/com/src/: ee_com_confirm.c  ee_com_indication.c  ee_cominit.c  ee_convert.c  ee_dmonitor.c  ee_filters.c  ee_hmonitor.c  ee_initmessage.c  ee_memo.c  ee_msgreception.c  ee_msgstatus.c  ee_notify_error.c  ee_pmonitor.c  ee_queue_DM.c  ee_queue_PM.c  ee_queue_TM.c  ee_receivedynamic.c  ee_receivestatic.c  ee_senddynamic.c  ee_sendstatic.c  ee_sendzero.c  ee_shared_send.c  ee_startcom.c  ee_startperiodic.c  ee_stopcom.c  ee_stopperiodic.c  ee_tmonitor.c
bsw/os/ee_files/pkg/cpu/common/inc/: ee_compiler_ccs.h  ee_compiler_iar.h  ee_irqstub.h
bsw/os/ee_files/pkg/cpu/common/src/: ee_context.c  ee_hal_structs.c
bsw/os/ee_files/pkg/cpu/e200zx/inc/: ee_cpu.h  ee_cpu_asm.h  ee_cpu_os.h  ee_internal.h  ee_irq.h  ee_mcu_regs.h
bsw/os/ee_files/pkg/cpu/e200zx/src/: ee_irq.c  ee_memp_syscall.S
bsw/os/ee_files/pkg/kernel/alarms/src/: ee_alcancel.c  ee_alget.c  ee_alsetabs.c  ee_alsetrel.c  ee_altick.c
bsw/os/ee_files/pkg/kernel/as/inc/: ee_as_internal.h  ee_as_kernel.h
bsw/os/ee_files/pkg/kernel/as/src/: ee_as_base.c  ee_as_ioc.c  ee_as_multicore.c  ee_as_osapp.c  ee_as_prot_error.c  ee_as_rpc.c  ee_as_schedule_tables.c  ee_as_spinlocks.c  ee_as_timing_prot.c
bsw/os/ee_files/pkg/kernel/edf/inc/: ee_internal.h  ee_kernel.h
bsw/os/ee_files/pkg/kernel/edf/src/: ee_gettime.c  ee_irqsc.c  (+6 more)
bsw/startup/: CMakeLists.txt  MPC56xx__Interrupt_Init.c  ee_boot.c
linker/: 56xx_flash.ld  MPC5644A_FLASH.lcf
nxp/: CMakeLists.txt
nxp/rtos/: FreeRTOSConfig.h
(+115 files in other folders)
